# IntentOS

./: .gitignore  CHANGELOG.md
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: agent.py  executor.py  locator.py  planner.py  reasoner.py  router.py  sessions.py  settings.py  verifier.py  vision.py
backend/app/context/: __init__.py  history.py  manager.py  models.py  resolver.py  tracker.py
backend/app/core/: constants.py  job_manager.py  llm.py  logger.py  settings.py
backend/app/executor/: executor.py
backend/app/experimental/: locator.py
backend/app/memory/: __init__.py  manager.py  models.py
backend/app/planner/: planner.py  schemas.py
backend/app/planning/: __init__.py  manager.py  models.py  planner.py  progress.py
backend/app/recovery/: __init__.py  manager.py  models.py  strategies.py
backend/app/reflection/: __init__.py  manager.py  models.py  reflector.py
backend/app/runtime/: job_manager.py  loop.py
backend/app/schemas/: plan.py  verification.py
backend/app/services/: planner.py  policy.py  reasoner.py  verifier.py
backend/app/skills/: __init__.py  _com.py  _windows_native.py  browser.py  clipboard.py  filesystem.py  keyboard.py  mouse.py  windows.py
backend/tests/: run_agent.py  test_capture.py  test_policy.py
docs/: ARCHITECTURE.md  HCI_SPEC.md  INTENT_MODEL.md  PRODUCT_VISION.md  RUNTIME.md  UI_UX_SPEC.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+70 files in other folders)
